fix some spacing on sidenav

--- a/layouts/partials/sidenav/sidenav.scss
+++ b/layouts/partials/sidenav/sidenav.scss
@@ -63,7 +63,7 @@ aside.sidenav {
     font-weight:200;
   }
   .sidenav-search {
-    margin-right: 30px;
+    //margin-right: 30px;
     .input-group-addon {
       background:none;
       border:none;
@@ -244,4 +244,16 @@ aside.sidenav-api {
     }
   }
 
+}
+
+@media (max-width: 1199px) {
+  aside.sidenav {
+    ul {
+      li {
+        a {
+          font-size: 17px;
+        }
+      }
+    }
+  }
 }
